sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:18: error: ';' expected but '[' found.
  Pour tout i dans [0,lgr-2], faire:
                   ^AlgCocktailSort1:20: error: ';' expected but '[' found.
  Pour tout i dans [lgr-2,0] en descendant, faire:
                   ^AlgCocktailSort1:22: error: ';' expected but symbol literal found.
tant qu'au moins l'un des parcours a inversé un élément
                  ^