sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
	var swap=false
	do{
		for(i<-0 to getNombreValeurs()-2){
			if(!plusPetit(i,i+1)){
				echange(i,i+1)
				swap=true
			}
		}
		for(i<-getNombreValeurs()-2 to 0){
			if(!plusPetit(i,i+1)){
				echange(i,i+1)
				swap=true
			}
		}
	}while(swap==true)
  Pour tout i dans [0,lgr-2], faire:
    si i et i+1 doivent être échangées, le faire
  Pour tout i dans [lgr-2,0] en descendant, faire:
    si i et i+1 doivent être échangées, le faire
tant qu'au moins l'un des parcours a inversé un élément
}
